[gd_scene load_steps=6 format=3 uid="uid://bnsxavfn2uxew"]

[ext_resource type="Script" path="res://scripts/trigger_area_bubble.gd" id="1_eqq2a"]
[ext_resource type="Shader" path="res://shaders/Bubble_red.gdshader" id="2_x2cur"]

[sub_resource type="SphereShape3D" id="SphereShape3D_6a2em"]
radius = 10.0

[sub_resource type="SphereMesh" id="SphereMesh_drwli"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gkcla"]
render_priority = 0
shader = ExtResource("2_x2cur")
shader_parameter/base_color = Color(0.560784, 0.14902, 0.227451, 1)
shader_parameter/pulse_color = Color(0.184314, 0.14902, 0.262745, 1)
shader_parameter/speed = 1.0
shader_parameter/scale = 1.0
shader_parameter/distortion = 0.5
shader_parameter/shield_power = 0.155
shader_parameter/rim_power = 1.0
shader_parameter/pulse_frequency = 1.5

[node name="Trigger_area_bubble" type="Area3D"]
script = ExtResource("1_eqq2a")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_6a2em")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 0, 0, 0)
mesh = SubResource("SphereMesh_drwli")
surface_material_override/0 = SubResource("ShaderMaterial_gkcla")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="miami_triggered" from="." to="." method="_on_miami_triggered"]
[connection signal="random_triggered" from="." to="." method="_on_random_triggered"]
[connection signal="re_triggered" from="." to="." method="_on_re_triggered"]
